feat: added client tracking and now enforcing max connections